# skillormeter

./: README.md  pyproject.toml
src/: agent.py  aws_bedrock.py  git_skillormeter.py  skillormeter.py
src/repo_scrap/: scrap_files.py
